fix spacing between table and view toggles for surface condition tables

--- a/IRMIS/src/styles/_edit.scss
+++ b/IRMIS/src/styles/_edit.scss
@@ -39,12 +39,16 @@ edit_base {
             margin-top: 10px;
         }
 
-        a.table-toggle.active, a.table-toggle.active:hover {
-            color: $green;
-        }
+        a.table-toggle {
+            margin-top: 20px;
 
-        a.table-toggle:first-of-type {
-            margin-right: 20px;
+            &:first-of-type {
+                margin-right: 20px;
+            }
+
+            &.active, &.active:hover {
+                color: $green;
+            }
         }
     }
 }
