--- a/IRMIS/src/styles/_table.scss
+++ b/IRMIS/src/styles/_table.scss
@@ -30,7 +30,6 @@
     border-bottom: 1px solid $light-gray;
     border-right: 1px solid $light-gray;
     border-left: 1px solid $light-gray;
-    margin-top: 25px !important;
     overflow-x: auto;
 }
 
